# ROM-Analyzer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cargo/: mutants.toml
.github/workflows/: build.yml  clippy.yml  fmt.yml  mutants.yml  publish.yml  test.yml
src/: dispatcher.rs  error.rs  lib.rs  main.rs  region.rs
src/archive/: chd.rs  mod.rs  zip.rs
src/console/: gamegear.rs  gb.rs  gba.rs  genesis.rs  mastersystem.rs  mod.rs  n64.rs  nes.rs  psx.rs  sega_cartridge.rs  segacd.rs  snes.rs
