[package]
name = "rom-analyzer"
version = "0.2.0"
edition = "2024"
authors = ["Michael Pobega <pobega@gmail.com>"]
description = "A CLI tool for analyzing console ROM file headers."

[lib]

[dependencies]
zip = "0.6"
clap = { version = "4.0", features = ["derive"] }
chd = "0.3.3"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
