[package]
name = "rom-analyzer"
version = "1.0.0"
edition = "2024"
authors = ["Michael Pobega <pobega@gmail.com>"]
description = "A CLI tool for analyzing console ROM file headers."

[lib]

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
chd = "0.3.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

[dev-dependencies]
tempfile = "3.2"
