[package]
name = "rom-analyzer"
version = "1.1.0"
edition = "2024"
license = "MIT"
authors = ["Michael Pobega <pobega@gmail.com>"]
description = "A CLI tool for analyzing console ROM file headers."
repository = "https://github.com/Pobega/ROM-Analyzer"

[lib]

[dependencies]
bitflags = { version = "2.4", features = ["serde"] }
chd = "0.3.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

walkdir = "2"

[dev-dependencies]
tempfile = "3.2"
